--- a/spring-minikube/devops/deployment-rating.yml
+++ b/spring-minikube/devops/deployment-rating.yml
@@ -1,22 +1,40 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rating-service
+  name: student-service
   labels:
-    run: rating-service
+    run: student-service
 spec:
   replicas: 1
   selector:
     matchLabels:
-      run: rating-service
+      run: student-service
   template:
     metadata:
       labels:
-        run: rating-service
+        run: student-service
     spec:
       containers:
-      - name: rating-service
-        image: anithaannem/rating-service:latest
+      - name: student-service
+        image: anithaannem/student-service:latest
         ports:
-        - containerPort: 5000
+        - containerPort: 7000
           protocol: TCP
+        env:
+        - name: DB_HOST
+          value: student-db
+        - name: DB_PORT
+          value: "5432"
+        - name: DB_NAME
+          value: studentdb
+        - name: DB_USER
+          value: studentuser
+        - name: DB_PASSWORD
+          value: studentpass
+        volumeMounts:
+        - name: student-pv
+          mountPath: /var/lib/student-data
+      volumes:
+      - name: student-pv
+        persistentVolumeClaim:
+          claimName: student-pvc
