--- a/spring-minikube/devops/deployment-rating.yml
+++ b/spring-minikube/devops/deployment-rating.yml
@@ -1,40 +1,40 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: student-service
+  name: rating-service
   labels:
-    run: student-service
+    run: rating-service
 spec:
   replicas: 1
   selector:
     matchLabels:
-      run: student-service
+      run: rating-service
   template:
     metadata:
       labels:
-        run: student-service
+        run: rating-service
     spec:
       containers:
-      - name: student-service
-        image: anithaannem/student-service:latest
+      - name: rating-service
+        image: anithaannem/rating-service:latest
         ports:
-        - containerPort: 7000
+        - containerPort: 5000
           protocol: TCP
         env:
         - name: DB_HOST
-          value: student-db
+          value: rating-db
         - name: DB_PORT
           value: "5432"
         - name: DB_NAME
-          value: studentdb
+          value: ratingdb
         - name: DB_USER
-          value: studentuser
+          value: ratinguser
         - name: DB_PASSWORD
-          value: studentpass
+          value: ratingpass
         volumeMounts:
-        - name: student-pv
-          mountPath: /var/lib/student-data
+        - name: rating-pv
+          mountPath: /var/lib/rating-data
       volumes:
-      - name: student-pv
+      - name: rating-pv
         persistentVolumeClaim:
-          claimName: student-pvc
+          claimName: rating-pvc
