--- a/spring-minikube/devops/deployment-rating.yml
+++ b/spring-minikube/devops/deployment-rating.yml
@@ -37,4 +37,4 @@ spec:
       volumes:
       - name: rating-pv
         persistentVolumeClaim:
-          claimName: rating-pvc
+          claimName: rating-mysql-pvc
