--- a/spring-minikube/devops/deployment-student.yml
+++ b/spring-minikube/devops/deployment-student.yml
@@ -37,4 +37,4 @@ spec:
       volumes:
       - name: student-pv
         persistentVolumeClaim:
-          claimName: student-pvc
+          claimName: student-mysql-pvc
