--- a/spring-minikube/devops/service-student.yml
+++ b/spring-minikube/devops/service-student.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: student-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     run: student-service
   ports:
@@ -11,4 +11,3 @@ spec:
       protocol: TCP
       port: 7000
       targetPort: 7000
-      nodePort: 30001
