--- a/spring-minikube/devops/ingress.yml
+++ b/spring-minikube/devops/ingress.yml
@@ -3,24 +3,25 @@ kind: Ingress
 metadata:
   name: gateway-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
+  ingressClassName: nginx   # ← important
   rules:
-  - host: mysite.com
+  - host: mysite.local
     http:
       paths:
-      - path: /student
+      - path: /student(/|$)(.*)
         pathType: Prefix
         backend:
           service:
             name: student-service
             port:
               number: 7000
-      - path: /rating
+      - path: /rating(/|$)(.*)
         pathType: Prefix
         backend:
           service:
             name: rating-service
             port:
+              number: 5000
               number: 5000
