--- a/spring-minikube/devops/ingress.yml
+++ b/spring-minikube/devops/ingress.yml
@@ -3,9 +3,9 @@ kind: Ingress
 metadata:
   name: gateway-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /   # Forward everything to root of service
 spec:
-  ingressClassName: nginx   # ← important
+  ingressClassName: nginx
   rules:
   - host: mysite.local
     http:
@@ -23,5 +23,4 @@ spec:
           service:
             name: rating-service
             port:
-              number: 5000
               number: 5000
