--- a/spring-minikube/config-server/config-server-deployment.yaml
+++ b/spring-minikube/config-server/config-server-deployment.yaml
@@ -14,6 +14,19 @@ spec:
     spec:
       containers:
         - name: config-server
-          image: your-config-server-image:latest
+          image: anithaannem/config-server:1.0
           ports:
             - containerPort: 8888
+          imagePullPolicy: Always
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: config-server
+spec:
+  selector:
+    app: config-server
+  ports:
+    - protocol: TCP
+      port: 8888
+      targetPort: 8888
