--- a/spring-minikube/config-server/pom.xml
+++ b/spring-minikube/config-server/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.2</version>
+        <version>3.1.5</version> <!-- Downgraded -->
         <relativePath/>
     </parent>
 
@@ -67,7 +67,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.1.5</version> <!-- Match parent version -->
                 <executions>
                     <execution>
                         <goals>
