--- a/spring-minikube/devops/ingress.yml
+++ b/spring-minikube/devops/ingress.yml
@@ -2,20 +2,22 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: gateway-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
   - host: mysite.local
     http:
       paths:
-      - path: /student
+      - path: /student(/|$)(.*)
         pathType: Prefix
         backend:
           service:
             name: student-service
             port:
               number: 7000
-      - path: /rating
+      - path: /rating(/|$)(.*)
         pathType: Prefix
         backend:
           service:
