--- a/spring-minikube/devops/ingress.yml
+++ b/spring-minikube/devops/ingress.yml
@@ -3,21 +3,21 @@ kind: Ingress
 metadata:
   name: gateway-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
   - host: mysite.local
     http:
       paths:
-      - path: /student(/|$)(.*)
+      - path: /student
         pathType: Prefix
         backend:
           service:
             name: student-service
             port:
               number: 7000
-      - path: /rating(/|$)(.*)
+      - path: /rating
         pathType: Prefix
         backend:
           service:
