--- a/spring-minikube/devops/default-backend.yaml
+++ b/spring-minikube/devops/default-backend.yaml
@@ -1,34 +1,29 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: default-http-backend
+  name: default-backend
+  namespace: prod
 spec:
   replicas: 1
   selector:
-    app: default-http-backend
+    matchLabels:
+      app: default-backend
   template:
     metadata:
       labels:
-        app: default-http-backend
+        app: default-backend
     spec:
-      terminationGracePeriodSeconds: 60
       containers:
-      - name: default-http-backend
-        # Any image is permissable as long as:
-        # 1. It serves a 404 page at /
-        # 2. It serves 200 on a /healthz endpoint
+      - name: default-backend
         image: gcr.io/google_containers/defaultbackend:1.0
+        ports:
+        - containerPort: 8080
         livenessProbe:
           httpGet:
             path: /healthz
             port: 8080
-            scheme: HTTP
           initialDelaySeconds: 30
           timeoutSeconds: 5
-        ports:
-        - containerPort: 8080
-        - containerPort: 80
-          hostPort: 80
         resources:
           limits:
             cpu: 10m
@@ -36,3 +31,17 @@ spec:
           requests:
             cpu: 10m
             memory: 20Mi
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: default-backend
+  namespace: prod
+spec:
+  selector:
+    app: default-backend
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
