--- a/spring-minikube/helm/rating-chart/values.yaml
+++ b/spring-minikube/helm/rating-chart/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: anithaannem/rating-service
-  tag: 1.0
+  tag: "1.0"
   pullPolicy: IfNotPresent
 
 service:
@@ -20,4 +20,5 @@ mysql:
   user: ratinguser
   password: cmF0aW5ncGFzcw==      # base64 encoded
   storage: 5Gi
+  storageClass: "gp2"
   replicas: 1
