--- a/spring-minikube/helm/student-chart/templates/service.yaml
+++ b/spring-minikube/helm/student-chart/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ .Values.service.name }}
   labels:
-    app: {{ .Chart.Name }}
+    app: student-mysql
 spec:
   type: {{ .Values.service.type }}
   selector:
-    app: {{ .Chart.Name }}
+    app: student-mysql
   ports:
     - name: http
       protocol: TCP
