--- a/spring-minikube/devops/ingress.yml
+++ b/spring-minikube/devops/ingress.yml
@@ -5,11 +5,12 @@ metadata:
   namespace: prod
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # disable SSL redirect so HTTP-01 works
 spec:
   ingressClassName: nginx
   tls:
   - hosts:
-    - app.cloudninja.live
+      - app.cloudninja.live
     secretName: cloudninja-tls
   rules:
   - host: app.cloudninja.live
@@ -23,6 +24,7 @@ spec:
             name: default-backend
             port:
               number: 80
+
       # Student service path
       - path: /student
         pathType: Prefix
@@ -31,6 +33,7 @@ spec:
             name: student-service
             port:
               number: 7000
+
       # Rating service path
       - path: /rating
         pathType: Prefix
