--- a/spring-minikube/devops/service-student.yml
+++ b/spring-minikube/devops/service-student.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: student-chart
+    run: student-service
   ports:
     - name: http
       protocol: TCP
