--- a/spring-minikube/student-service/src/main/resources/application.properties
+++ b/spring-minikube/student-service/src/main/resources/application.properties
@@ -1,2 +1,37 @@
-server.port=7000
+# ---------------------------------------------------------
+# Application Info
+# ---------------------------------------------------------
 spring.application.name=student-service
+server.port=7000
+
+# ---------------------------------------------------------
+# Eureka Client Configuration (optional)
+# ---------------------------------------------------------
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# ---------------------------------------------------------
+# Actuator + Prometheus Configuration (Spring Boot 1.5.x)
+# ---------------------------------------------------------
+management.security.enabled=false
+security.basic.enabled=false
+
+# Expose all actuator endpoints
+endpoints.default.web.enabled=true
+endpoints.health.sensitive=false
+endpoints.metrics.sensitive=false
+
+# Prometheus metrics endpoint
+endpoints.prometheus.enabled=true
+endpoints.prometheus.sensitive=false
+
+# Root context for endpoints (so /metrics and /health work directly)
+management.context-path=/
+
+# ---------------------------------------------------------
+# Logging Configuration
+# ---------------------------------------------------------
+logging.level.org.springframework=INFO
+logging.level.example=DEBUG
