--- a/spring-minikube/devops/student-service-nodeport.yml
+++ b/spring-minikube/devops/student-service-nodeport.yml
@@ -9,4 +9,4 @@ spec:
   ports:
   - port: 7000
     targetPort: 7000
-    nodePort: 30007  # you can choose between 30000–32767
+    nodePort: 30007  
